# AgentWorkplace

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/adapter-codex/: Cargo.toml
crates/adapter-codex/src/: attach.rs  lib.rs
crates/adapter-codex/tests/: attach.rs  commit_point.rs  delivery.rs  subscription_release.rs
crates/broker/: Cargo.toml
crates/broker/src/: core.rs  lib.rs  server.rs  store.rs
crates/broker/src/core/: rpc.rs
crates/broker/tests/: codex_routing.rs  integration.rs
crates/broker/tests/common/: mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/shim-claude/: Cargo.toml
crates/shim-claude/src/: lib.rs
crates/shim-claude/tests/: shim.rs
crates/workplace/: Cargo.toml  build.rs
crates/workplace/src/: codex_supervisor.rs  config.rs  main.rs  tui.rs
docs/: setup.md
docs/adapters/: session-lifecycle.md
docs/adapters/claude/: findings.md  requirements.md  session-lifecycle.md
docs/adapters/codex/: findings.md  requirements.md  session-lifecycle.md
docs/architecture/: daemon.md  message-model.md  overview.md  rpc-surface.md
docs/decision-records/: 0001-push-delivery-not-polling.md  0002-peer-sessions-no-agent-as-tool-nesting.md  0003-per-harness-native-push-adapters.md  0005-broker-owned-append-only-audit-log.md  0006-human-as-first-class-principal.md  0007-accept-claude-channels-research-preview.md  0009-self-service-subscriptions-human-override.md  0010-local-first-defaults-not-localhost-bound.md  0011-multiplatform-support.md  0012-approvals-are-notify-only.md  0013-rust-implementation-language.md  0014-json-rpc-wire-protocol.md  0015-claude-channels-interactive-only.md  0016-tcp-broker-transport.md  0017-embedded-sqlite-storage.md  0018-channel-lifecycle-archive-and-guarded-deletion.md  0019-admin-credential.md  0020-event-driven-tui-rendering.md  README.md
docs/decision-records/superseded/: 0004-topic-pubsub-human-managed-subscriptions.md  0007-accept-claude-channels-research-preview.md  0008-v1-local-first-single-machine.md
