[package]
name = "workplace-adapter-codex"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
name = "adapter_codex"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[dev-dependencies]
# test-util enables Tokio's paused clock (time::pause / advance) for the
# resume-timeout regression; dev-only, never in the shipped adapter.
tokio = { workspace = true, features = ["test-util"] }
