[package]
name = "workplace-broker"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
name = "broker"
path = "src/lib.rs"

[dependencies]
protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
