[package]
name = "workplace-shim-claude"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
name = "shim_claude"
path = "src/lib.rs"

[dependencies]
protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
