[package]
name = "workplace"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "workplace"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
broker.workspace = true
shim-claude.workspace = true
adapter-codex.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
clap_complete.workspace = true
ratatui.workspace = true
crossterm.workspace = true
toml.workspace = true
dirs.workspace = true
chrono.workspace = true
getrandom.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
futures-util.workspace = true
